# clox

./: .gitignore  CMakeLists.txt  CMakePresets.json  chunk.c  chunk.h  clox.c  common.h  debug.c  debug.h  main.c  memory.c  memory.h  test_my.c  value.c  value.h  vm.c  vm.h
notes/: 24-08-2025.txt
